RESOLVED FIXED203061
iOS: inputmode=none is not respected with a hardware keyboard attached
https://bugs.webkit.org/show_bug.cgi?id=203061
Summary iOS: inputmode=none is not respected with a hardware keyboard attached
Tim Horton
Reported 2019-10-16 16:09:49 PDT
iOS: inputmode=none is not respected with a hardware keyboard attached
Attachments
Patch (5.23 KB, patch)
2019-10-16 16:11 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-10-16 16:11:11 PDT
Radar WebKit Bug Importer
Comment 2 2019-10-16 16:18:07 PDT
WebKit Commit Bot
Comment 3 2019-10-16 17:15:35 PDT
Comment on attachment 381128 [details] Patch Clearing flags on attachment: 381128 Committed r251218: <https://trac.webkit.org/changeset/251218>
WebKit Commit Bot
Comment 4 2019-10-16 17:15:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.