iOS: inputmode=none is not respected with a hardware keyboard attached https://bugs.webkit.org/show_bug.cgi?id=203061

Reviewed by Daniel Bates.

Source/WebKit:

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView shouldShowAutomaticKeyboardUI]):
We can resolve this FIXME, as the underlying bug was fixed in <rdar://problem/52706523>.
This now means that we will respect inputmode=none even when a hardware
keyboard is attached, significantly improving the experience on sites that use it
by avoiding an intermittent input bar.

LayoutTests:

* fast/forms/ios/inputmode-none-with-hardware-keyboard.html: Added.
Clone inputmode-none.html to inputmode-none-with-hardware-keyboard.html
and remove the line to faux-detach the hardware keyboard.


Canonical link: https://commits.webkit.org/216484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251218 268f45cc-cd09-0410-ab3c-d52691b4dbfc